# fex

./: .dockerignore  .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  provider.rs  ui.rs  util.rs
src/providers/: apk.rs  apt.rs  brew.rs  dnf.rs  flatpak.rs  mod.rs  nix.rs  pacman.rs  paru.rs  snap.rs  xbps.rs  yay.rs  zerobrew.rs  zypper.rs
testing/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.fedora  Dockerfile.flatpak  Dockerfile.homebrew  Dockerfile.nixos  Dockerfile.opensuse  Dockerfile.snap  Dockerfile.ubuntu  Dockerfile.void  Dockerfile.zerobrew  test.sh
